zebra-state/src/service/finalized_state/disk_format/tests/snapshots/sprout_anchors_raw_data@testnet-2.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 153
expression: cf_data

---
[
  KV(
    k: "d7c612c817793191a1e68652121876d6b3bde40f4fa52bc314145ce6e5cdd259",
    v: "0001d7c612c817793191a1e68652121876d6b3bde40f4fa52bc314145ce6e5cdd259",
  ),
]
